fix(proposal): explorer link alignment fix (#486)

--- a/features/proposal/components/voter-details-card/voter-details-card.module.scss
+++ b/features/proposal/components/voter-details-card/voter-details-card.module.scss
@@ -75,10 +75,6 @@
   height: 24px;
   position: relative;
   width: 24px;
-  > a {
-    right: 0;
-    top: 0;
-  }
 }
 
 .iconWrapper {
@@ -113,6 +109,6 @@
   }
 
   .link {
-    padding: 4px;
+    padding: 16px 16px 4px 4px;
   }
 }
